# PeaChess

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS  LICENCE  README.MD
ext/: CMakeLists.txt
include/: chess.h  debug.h  fen.h  peachess.h  san.h
include/client/: client.h  uci.h  ui.h
include/server/: server.h
include/solver/: solver.h
include/ui/: ui.h
src/: debug.c
src/chess/: chess.c  fen.c  pgn.c
src/chess/pieces/: pawn.c
src/client/: c_window.c  client.c  main.c  ui.c  ui_board.c  ui_image.c  ui_renderer.c  ui_svg.c  ui_window.c
src/client/ui/: main.c  ui.c  ui_board.c  ui_image.c  ui_renderer.c  ui_svg.c
src/peachess/: chess.c  fen.c  magic.c  pgn.c  san.c
src/server/: server.c
